Bundle browserify dependencies separately from application code.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<div id="content"></div>
+		<script src="build/js/bundle.js"></script>
 		<script src="build/js/main.js"></script>
 	</body>
 </html>
